@@ -66,5 +66,12 @@
         "7"
       ]
     }
-  ]
+  ],
+  "requirements": [
+    {
+      "name": "puppet",
+      "version_requirement": ">= 4.7.0"
+    }
+  ],
+  "data_provider": "hiera"
 }
